--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.h2.console.path=/h2-console
 # JPA/Hibernate Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.settings.web-allow-others=true
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=*
@@ -19,10 +20,3 @@ management.endpoint.health.show-details=always
 
 # DevTools Configuration
 spring.devtools.restart.enabled=true
-
-spring.datasource.url=jdbc:h2:mem:metamapa;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
